target/classes/META-INF/fabric8/openshift/fund-transfer-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 0d00b5b8f5939d1afe221f576b61309a4830295e
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fund-transfer&var-version=2.1
  labels:
    app: fund-transfer
    provider: fabric8
    version: "2.1"
    group: in.co.dhdigital
  name: fund-transfer
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fund-transfer
    provider: fabric8
    group: in.co.dhdigital
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 0d00b5b8f5939d1afe221f576b61309a4830295e
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=fund-transfer&var-version=2.1
      labels:
        app: fund-transfer
        provider: fabric8
        version: "2.1"
        group: in.co.dhdigital
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: dhdigital/fund-transfer:2.1
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
