target/classes/META-INF/fabric8/openshift/fund-transfer-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: fund-transfer
    provider: fabric8
    version: "2.1"
    group: in.co.dhdigital
  name: fund-transfer
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fund-transfer
